[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/LC_Crimbus/crimmas_tree_bg.png" type="Texture" id=1]
[ext_resource path="res://Levels/22.0 Crimbus/Arch.tscn" type="PackedScene" id=2]
[ext_resource path="res://BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/22.0 Crimbus/CrimmasTree.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/22.0 Crimbus/TreeRoom.gd" type="Script" id=8]
[ext_resource path="res://sprites/LC_Crimbus/tree_bot1.png" type="Texture" id=9]
[ext_resource path="res://sprites/LC_Crimbus/tree_bot0.png" type="Texture" id=10]
[ext_resource path="res://sprites/LC_Crimbus/tree_bot2.png" type="Texture" id=11]
[ext_resource path="res://sprites/LC_Crimbus/tree_bot3.png" type="Texture" id=12]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "sigh",
"speed": 1.3
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "glowing",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 131.893, 53.4647 )

[node name="TreeRoom" type="Node2D"]
script = ExtResource( 8 )

[node name="BG" parent="." instance=ExtResource( 3 )]
margin_left = -1351.69
margin_top = -997.773
margin_right = 1470.31
margin_bottom = 1107.23

[node name="crimmas_tree_bg" type="Sprite" parent="."]
position = Vector2( -6.03937, -88.4122 )
texture = ExtResource( 1 )

[node name="PuppyCamera" parent="." instance=ExtResource( 4 )]
position = Vector2( 28.6158, 41.0809 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -937.969, -616.726 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1018.01, 992.806 )

[node name="BottomSP" parent="." instance=ExtResource( 5 )]
position = Vector2( -6.59912, 666.115 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 2.30878, 258.587 )

[node name="Arch" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -3.0523, 757.778 )

[node name="CrimmasTree" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 8.70312, 163.927 )

[node name="starbot" type="Node2D" parent="YSort"]
position = Vector2( 233.976, 229.024 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="YSort/starbot"]
position = Vector2( -9.90369, -48.2808 )
frames = SubResource( 1 )
animation = "sigh"
frame = 1
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="YSort/starbot"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/starbot/StaticBody2D"]
polygon = PoolVector2Array( -37.8918, 18.5392, 4.85579, 32.5848, 37.8325, 18.5392, 1.19173, 8.7683 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -1.91046, 0 )
polygon = PoolVector2Array( 235.098, 99.1328, -151.889, 86.2867, -178.931, -307.581 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D4"]
polygon = PoolVector2Array( -152.194, 87.8925, -250.145, 152.123, -299.923, 235.622, -583.942, -133.732 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PoolVector2Array( 185.015, 94.3155, 295.812, 181.026, 305.446, 272.554, 734.253, -85.9713 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
polygon = PoolVector2Array( -303.135, 246.862, -200.367, 343.208, -85.32, 399.277, -94.8397, 770.403 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D5"]
polygon = PoolVector2Array( 308.658, 256.497, 252.456, 333.573, 88.6693, 384.957, 82.4493, 777.591 )

[node name="TransitionZone" parent="." instance=ExtResource( 13 )]
position = Vector2( -3.94229, 793.72 )

[node name="CollisionShape2D" parent="TransitionZone" index="0"]
shape = SubResource( 2 )
[connection signal="transition_triggered" from="TransitionZone" to="." method="_on_TransitionZone_transition_triggered"]

[editable path="PuppyCamera"]

[editable path="TransitionZone"]
